<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:text="@string/existe_una_nueva_versi_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@string/la_nueva_versi_n_es"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_version_name"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_update"
            android:layout_margin="10dp"
            android:text="@string/actualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>




</LinearLayout>